--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/todomvc-app-css@2.4.2/index.css" />
-    <title>Document</title>
+    <title>Todo App</title>
   </head>
 
   <body></body>
